--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.container {
+  max-width: 100%;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
