--- a/src/Components/myCart/myCart.css
+++ b/src/Components/myCart/myCart.css
@@ -1,1 +1,29 @@
 
+
+  .myCarts {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.text-sm {
+  margin: 0 15px;
+  font-size: 18px;
+  color: #333;
+  font-weight: 500;
+}
+    .md\:w-40 {
+        width: 12rem;
+        height: 8rem;
+    }
+
+/* Media Query */
+@media screen and (max-width:550px) {
+    .myCarts {
+      margin-inline: 20px;
+      margin-block: 40px;
+    }
+        .md\:w-40 {
+        width: 100%;
+        height: 12rem;
+    }
+}
